--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "unpkg": "dist/aframe-startplay-component.min.js",
   "scripts": {
-    "build": "webpack index.js dist/aframe-startplay-component.js",
+    "build": "webpack",
     "dev": "budo index.js:dist/aframe-startplay-component.min.js --port 7000 --live --open",
     "dist": "npm run build && uglifyjs dist/aframe-startplay-component.js > dist/aframe-startplay-component.min.js",
     "lint": "semistandard -v | snazzy",
@@ -36,30 +36,31 @@
   "homepage": "https://github.com/i3games/aframe-startplay-component#readme",
   "devDependencies": {
     "aframe": "*",
-    "browserify": "^13.0.0",
-    "budo": "^8.2.2",
-    "chai": "^3.4.1",
-    "chai-shallow-deep-equal": "^1.3.0",
-    "ghpages": "^0.0.8",
-    "karma": "^0.13.15",
-    "karma-browserify": "^4.4.2",
+    "browserify": "^16.2.3",
+    "budo": "^11.5.0",
+    "chai": "^4.2.0",
+    "chai-shallow-deep-equal": "^1.4.6",
+    "ghpages": "0.0.10",
+    "karma": "^3.1.3",
+    "karma-browserify": "^6.0.0",
     "karma-chai-shallow-deep-equal": "0.0.4",
-    "karma-chrome-launcher": "2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-env-preprocessor": "^0.1.1",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-mocha": "^0.2.1",
-    "karma-mocha-reporter": "^1.1.3",
-    "karma-sinon-chai": "^1.1.0",
-    "mocha": "^2.3.4",
-    "randomcolor": "^0.4.4",
-    "semistandard": "^8.0.0",
-    "shelljs": "^0.7.0",
-    "sinon": "^1.17.5",
-    "sinon-chai": "^2.8.0",
-    "shx": "^0.1.1",
-    "snazzy": "^4.0.0",
-    "uglify-es": "github:mishoo/UglifyJS2#harmony",
-    "webpack": "^2.7.0"
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sinon-chai": "^2.0.2",
+    "mocha": "^5.2.0",
+    "randomcolor": "^0.5.3",
+    "semistandard": "^13.0.1",
+    "shelljs": "^0.8.3",
+    "shx": "^0.3.2",
+    "sinon": "^7.1.1",
+    "sinon-chai": "^3.3.0",
+    "snazzy": "^8.0.0",
+    "uglify-es": "^3.3.9",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
   },
   "semistandard": {
     "globals": [
